80% of first draft done. Abstract missing, intro incomplete.
Changed figure 1 to now include the results from kim 2015.

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -2065,6 +2065,26 @@
   keywords = {de-adaptation,error clamp,experiment,forgetting,learning and memory,memory,motion,motor activity,motor control,motor learning,movement}
 }
 
+@article{Criscimagna-Hemminger_Consolidation_2008a,
+  title = {Consolidation {{Patterns}} of {{Human Motor Memory}}},
+  author = {{Criscimagna-Hemminger}, Sarah E. and Shadmehr, Reza},
+  year = {2008},
+  month = sep,
+  journal = {Journal of Neuroscience},
+  volume = {28},
+  number = {39},
+  pages = {9610--9618},
+  publisher = {{Society for Neuroscience}},
+  issn = {0270-6474, 1529-2401},
+  doi = {10.1523/JNEUROSCI.3071-08.2008},
+  abstract = {Can memories be unlearned, or is unlearning a form of acquiring a new memory that competes with the old, effectively masking it? We considered motor memories that were acquired when people learned to use a novel tool. We trained people to reach with tool A and quantified recall in error-clamp trials, i.e., trials in which the memory was reactivated but error-dependent learning was minimized. We measured both the magnitude of the memory and its resistance to change. With passage of time between acquisition and reactivation (up to 24 h), memory of A slowly declined, but with reactivation remained resistant to change. After learning of tool A, brief exposure to tool B brought performance back to baseline, i.e., apparent extinction. Yet, for up to a few minutes after A+B training, output in error-clamp trials increased from baseline to match those who had trained only in A. This spontaneous recovery and convergence demonstrated that B did not produce any unlearning of A. Rather, it masked A with a new memory that was very fragile. We tracked the memory of B as a function of time and found that within minutes it was transformed from a fragile to a more stable state. Therefore, a sudden performance error in a well-learned motor task does not produce unlearning, but rather installs a competing but fragile memory that with passage of time acquires stability. Learning not only engages processes that adapt at multiple timescales, but once practice ends, the fast states are partially transformed into slower states.},
+  chapter = {Articles},
+  copyright = {Copyright \textcopyright{} 2008 Society for Neuroscience 0270-6474/08/289610-09\$15.00/0},
+  language = {en},
+  pmid = {18815247},
+  keywords = {forgetting,learning and memory,memory,motion,motor activity,motor control,motor learning,movement}
+}
+
 @article{Critchfield_Temporal_2001,
   title = {Temporal Discounting: Basic Research and the Analysis of Socially Important Behavior.},
   shorttitle = {Temporal Discounting},
@@ -3906,6 +3926,24 @@
   language = {eng},
   pmid = {21993844},
   keywords = {Health Behavior,Health Communication,Health Knowledge; Attitudes; Practice,Health Promotion,Humans,Intention,Persuasive Communication}
+}
+
+@article{Gandolfo_Motor_1996,
+  title = {Motor Learning by Field Approximation},
+  author = {Gandolfo, F. and {Mussa-Ivaldi}, F. A. and Bizzi, E.},
+  year = {1996},
+  month = apr,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {93},
+  number = {9},
+  pages = {3843--3846},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.93.9.3843},
+  abstract = {We investigated how human subjects adapt to forces perturbing the motion of their ams. We found that this kind of learning is based on the capacity of the central nervous system (CNS) to predict and therefore to cancel externally applied perturbing forces. Our experimental results indicate: (i) that the ability of the CNS to compensate for the perturbing forces is restricted to those spatial locations where the perturbations have been experienced by the moving arm. The subjects also are able to compensate for forces experienced at neighboring workspace locations. However, adaptation decays smoothly and quickly with distance from the locations where disturbances had been sensed by the moving limb. (ii) Our experiments also how that the CNS builds an internal model of the external perturbing forces in intrinsic (muscles and / or joints) coordinates.},
+  chapter = {Research Article},
+  language = {en},
+  pmid = {8632977}
 }
 
 @article{Gandolla_Rethinking_2014,
@@ -6059,6 +6097,25 @@
   abstract = {Alhough humans often make a series of related decisions, it is unknown whether this is done by relying on optimal or heuristic strategies. Here, the\&nbsp;authors show that humans rely on both\&nbsp;the best heuristic and the optimal policy, and that these strategies are controlled by parts of the medial prefrontal cortex.},
   copyright = {2018 The Author(s)},
   language = {en}
+}
+
+@article{Krakauer_Independent_1999,
+  title = {Independent Learning of Internal Models for Kinematic and Dynamic Control of Reaching},
+  author = {Krakauer, John W. and Ghilardi, Maria-Felice and Ghez, Claude},
+  year = {1999},
+  month = nov,
+  journal = {Nature Neuroscience},
+  volume = {2},
+  number = {11},
+  pages = {1026--1031},
+  publisher = {{Nature Publishing Group}},
+  issn = {1546-1726},
+  doi = {10.1038/14826},
+  abstract = {Psychophysical studies of reaching movements suggest that hand kinematics are learned from errors in extent and direction in an extrinsic coordinate system, whereas dynamics are learned from proprioceptive errors in an intrinsic coordinate system. We examined consolidation and interference to determine if these two forms of learning were independent. Learning and consolidation of two novel transformations, a rotated spatial reference frame and altered intersegmental dynamics, did not interfere with each other and consolidated in parallel. Thus separate kinematic and dynamic models were constructed simultaneously based on errors computed in different coordinate frames, and possibly, in different sensory modalities, using separate working-memory systems. These results suggest that computational approaches to motor learning should include two separate performance errors rather than one.},
+  copyright = {1999 Nature America Inc.},
+  language = {en},
+  keywords = {visuomotor rotation},
+  annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Research}
 }
 
 @article{Kuipers_Spatial_2000,
@@ -9191,7 +9248,27 @@
   language = {eng},
   pmcid = {PMC6577492},
   pmid = {8182467},
-  keywords = {Adaptation; Physiological,Adult,Arm,Humans,Learning,Models; Biological,Motor Activity}
+  keywords = {Adaptation; Physiological,Adult,Arm,generalization,Humans,Learning,Models; Biological,Motor Activity}
+}
+
+@article{Shadmehr_Functional_1997,
+  title = {Functional {{Stages}} in the {{Formation}} of {{Human Long}}-{{Term Motor Memory}}},
+  author = {Shadmehr, Reza and {Brashers-Krug}, Thomas},
+  year = {1997},
+  month = jan,
+  journal = {Journal of Neuroscience},
+  volume = {17},
+  number = {1},
+  pages = {409--419},
+  publisher = {{Society for Neuroscience}},
+  issn = {0270-6474, 1529-2401},
+  doi = {10.1523/JNEUROSCI.17-01-00409.1997},
+  abstract = {Previous research has demonstrated that the primate CNS has the ability to learn and store multiple and conflicting visuo-motor maps. Here we studied the ability of human subjects to learn to make reaching movements while interacting with one of two conflicting mechanical environments as produced by a robotic manipulandum. We demonstrate that two motor maps may be learned and retained, but only if the training sessions in the tasks are separated by an interval of {$\sim$}5 hr. If the interval is shorter, learning of the second map begins with an internal model appropriate for the first task and performance in the second task is significantly impaired. Analysis of the after-effects suggests that with a short temporal distance, learning of the second task leads to an unlearning of the internal model for the first. With the longer temporal distance, learning of the second task starts with an unbiased internal model, and performance approaches that of naives. Furthermore, the memory of the consolidated skill lasts for at least 5 months after training. These results argue for a distinct change in the state of resistance of motor memory (to disruption) within a few hours after acquisition. We suggest that motor practice results in memories that have at least two functional components: soon after completion of practice, one component fades while another is strengthened. A further experiment suggests that the hypothetical first stage is not merely a gateway to long-term memory, but also temporary storage for items of information, whether new or old, for use in the near-term. Our results raise the possibility that there are distinct neuronal mechanisms for representation of the two functional stages of motor memory.},
+  chapter = {Articles},
+  copyright = {Copyright \textcopyright{} 1997 Society for Neuroscience},
+  language = {en},
+  pmid = {8987766},
+  keywords = {consolidation,internal models,long-term memory,motor control,motor learning,motor memory,reaching movements,short-term memory,virtual environments}
 }
 
 @article{Shadmehr_Motor_2018,
@@ -9210,6 +9287,24 @@
   language = {English},
   pmid = {30040941},
   keywords = {neurons}
+}
+
+@article{Shadmehr_Neural_1997,
+  title = {Neural {{Correlates}} of {{Motor Memory Consolidation}}},
+  author = {Shadmehr, Reza and Holcomb, Henry H.},
+  year = {1997},
+  month = aug,
+  journal = {Science},
+  volume = {277},
+  number = {5327},
+  pages = {821--825},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.277.5327.821},
+  abstract = {Computational studies suggest that acquisition of a motor skill involves learning an internal model of the dynamics of the task, which enables the brain to predict and compensate for mechanical behavior. During the hours that follow completion of practice, representation of the internal model gradually changes, becoming less fragile with respect to behavioral interference. Here, functional imaging of the brain demonstrates that within 6 hours after completion of practice, while performance remains unchanged, the brain engages new regions to perform the task; there is a shift from prefrontal regions of the cortex to the premotor, posterior parietal, and cerebellar cortex structures. This shift is specific to recall of an established motor skill and suggests that with the passage of time, there is a change in the neural representation of the internal model and that this change may underlie its increased functional stability.},
+  chapter = {Report},
+  language = {en},
+  pmid = {9242612}
 }
 
 @article{Shamosh_Delay_2008,
