--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -2783,6 +2783,22 @@
   keywords = {honeybee; odor concentrations; odor mixtures; olfaction; response time}
 }
 
+@article{Dizio_Motor_1995,
+  title = {Motor Adaptation to {{Coriolis}} Force Perturbations of Reaching Movements: Endpoint but Not Trajectory Adaptation Transfers to the Nonexposed Arm},
+  shorttitle = {Motor Adaptation to {{Coriolis}} Force Perturbations of Reaching Movements},
+  author = {Dizio, P. and Lackner, J. R.},
+  year = {1995},
+  month = oct,
+  journal = {Journal of Neurophysiology},
+  volume = {74},
+  number = {4},
+  pages = {1787--1792},
+  publisher = {{American Physiological Society}},
+  issn = {0022-3077},
+  doi = {10.1152/jn.1995.74.4.1787},
+  abstract = {1. Reaching movements made in a rotating room generate Coriolis forces that are directly proportional to the cross product of the room's angular velocity and the arm's linear velocity. Such Coriolis forces are inertial forces not involving mechanical contact with the arm. 2. We measured the trajectories of arm movements made in darkness to a visual target that was extinguished at the onset of each reach. Prerotation subjects pointed with both the right and left arms in alternating sets of eight movements. During rotation at 10 rpm, the subjects reached only with the right arm. Postrotation, the subjects pointed with the left and right arms, starting with the left, in alternating sets of eight movements. 3. The initial perrotary reaching movements of the right arm were highly deviated both in movement path and endpoint relative to the prerotation reaches of the right arm. With additional movements, subjects rapidly regained straight movement paths and accurate endpoints despite the absence of visual or tactile feedback about reaching accuracy. The initial postrotation reaches of the left arm followed straight paths to the wrong endpoint. The initial postrotation reaches of the right arm had paths with mirror image curvature to the initial perrotation reaches of the right arm but went to the correct endpoint. 4. These observations are inconsistent with current equilibrium point models of movement control. Such theories predict accurate reaches under our experimental conditions. Our observations further show independent implementation of movement and posture, as evidenced by transfer of endpoint adaptation to the nonexposed arm without transfer of path adaptation. Endpoint control may occur at a relatively central stage that represents general constraints such as gravitoinertial force background or egocentric direction relative to both arms, and control of path may occur at a more peripheral stage that represents moments of inertia and muscle dynamics unique to each limb. 5. Endpoint and path adaptation occur despite the absence both of mechanical contact cues about the perturbing force and visual or tactile cues about movement accuracy. These findings point to the importance of muscle spindle signals, monitoring of motor commands, and possibly joint and tendon receptors in a detailed trajectory monitoring process. Muscle spindle primary and secondary afferent signals may differentially influence adaptation of movement shape and endpoint, respectively.}
+}
+
 @article{Dolan_Goals_2013,
   title = {Goals and {{Habits}} in the {{Brain}}},
   author = {Dolan, Ray J. and Dayan, Peter},
@@ -6894,6 +6910,22 @@
   pmid = {23635870}
 }
 
+@article{Marko_Sensitivity_2012,
+  title = {Sensitivity to Prediction Error in Reach Adaptation},
+  author = {Marko, Mollie K. and Haith, Adrian M. and Harran, Michelle D. and Shadmehr, Reza},
+  year = {2012},
+  month = sep,
+  journal = {Journal of Neurophysiology},
+  volume = {108},
+  number = {6},
+  pages = {1752--1763},
+  publisher = {{American Physiological Society}},
+  issn = {0022-3077},
+  doi = {10.1152/jn.00177.2012},
+  abstract = {It has been proposed that the brain predicts the sensory consequences of a movement and compares it to the actual sensory feedback. When the two differ, an error signal is formed, driving adaptation. How does an error in one trial alter performance in the subsequent trial? Here we show that the sensitivity to error is not constant but declines as a function of error magnitude. That is, one learns relatively less from large errors compared with small errors. We performed an experiment in which humans made reaching movements and randomly experienced an error in both their visual and proprioceptive feedback. Proprioceptive errors were created with force fields, and visual errors were formed by perturbing the cursor trajectory to create a visual error that was smaller, the same size, or larger than the proprioceptive error. We measured single-trial adaptation and calculated sensitivity to error, i.e., the ratio of the trial-to-trial change in motor commands to error size. We found that for both sensory modalities sensitivity decreased with increasing error size. A reanalysis of a number of previously published psychophysical results also exhibited this feature. Finally, we asked how the brain might encode sensitivity to error. We reanalyzed previously published probabilities of cerebellar complex spikes (CSs) and found that this probability declined with increasing error size. From this we posit that a CS may be representative of the sensitivity to error, and not error itself, a hypothesis that may explain conflicting reports about CSs and their relationship to error.},
+  keywords = {cerebellum,motor learning,proprioception,vision}
+}
+
 @article{Markovic_Comparative_2016,
   title = {Comparative {{Analysis}} of {{Behavioral Models}} for {{Adaptive Learning}} in {{Changing Environments}}},
   author = {Markovi{\'c}, Dimitrije and Kiebel, Stefan J.},
@@ -8872,6 +8904,21 @@
   abstract = {We studied how subjects learned to make movements against unpredictable perturbations. Twelve healthy human subjects made goal-directed reaching movements in the horizontal plane while holding the handle of a two-joint robotic manipulator. The robot generated viscous force fields that perturbed the limb perpendicular to the desired direction of movement. The amplitude (but not the direction) of the viscous field varied randomly from trial to trial. Systems identification techniques were employed to characterize how subjects adapted to these random perturbations. Subject performance was quantified primarily using the peak deviation from a straight-line hand path. Subjects adapted their arm movements to the sequence of random force-field amplitudes. This adaptive response compensated for the approximate mean from the random sequence of perturbations and did not depend on the statistical distribution of that sequence. Subjects did not adapt by directly counteracting the mean field strength itself on each trial but rather by using information about perturbations and movement errors from a limited number of previous trials to adjust motor commands on subsequent trials. This strategy permitted subjects to achieve near-optimal performance (defined as minimizing movement errors in a least-squares sense) while maintaining computational efficiency. A simple model using information about movement errors and perturbation amplitudes from a single previous trial predicted subject performance in stochastic environments with a high degree of fidelity and further predicted key performance features observed in nonstochastic environments. This suggests that the neural structures modified during motor adaptation require only short-term memory. Explicit representations regarding movements made more than a few trials in the past are not used in generating optimal motor responses on any given trial.}
 }
 
+@article{Scheidt_Learning_2001a,
+  title = {Learning to {{Move Amid Uncertainty}}},
+  author = {Scheidt, Robert A. and Dingwell, Jonathan B. and {Mussa-Ivaldi}, Ferdinando A.},
+  year = {2001},
+  month = aug,
+  journal = {Journal of Neurophysiology},
+  volume = {86},
+  number = {2},
+  pages = {971--985},
+  publisher = {{American Physiological Society}},
+  issn = {0022-3077},
+  doi = {10.1152/jn.2001.86.2.971},
+  abstract = {We studied how subjects learned to make movements against unpredictable perturbations. Twelve healthy human subjects made goal-directed reaching movements in the horizontal plane while holding the handle of a two-joint robotic manipulator. The robot generated viscous force fields that perturbed the limb perpendicular to the desired direction of movement. The amplitude (but not the direction) of the viscous field varied randomly from trial to trial. Systems identification techniques were employed to characterize how subjects adapted to these random perturbations. Subject performance was quantified primarily using the peak deviation from a straight-line hand path. Subjects adapted their arm movements to the sequence of random force-field amplitudes. This adaptive response compensated for the approximate mean from the random sequence of perturbations and did not depend on the statistical distribution of that sequence. Subjects did not adapt by directly counteracting the mean field strength itself on each trial but rather by using information about perturbations and movement errors from a limited number of previous trials to adjust motor commands on subsequent trials. This strategy permitted subjects to achieve near-optimal performance (defined as minimizing movement errors in a least-squares sense) while maintaining computational efficiency. A simple model using information about movement errors and perturbation amplitudes from a single previous trial predicted subject performance in stochastic environments with a high degree of fidelity and further predicted key performance features observed in nonstochastic environments. This suggests that the neural structures modified during motor adaptation require only short-term memory. Explicit representations regarding movements made more than a few trials in the past are not used in generating optimal motor responses on any given trial.}
+}
+
 @article{Scheidt_Persistence_2000,
   title = {Persistence of Motor Adaptation during Constrained, Multi-Joint, Arm Movements},
   author = {Scheidt, R. A. and Reinkensmeyer, D. J. and Conditt, M. A. and Rymer, W. Z. and {Mussa-Ivaldi}, F. A.},
@@ -9533,6 +9580,25 @@
   pmcid = {PMC3404800},
   pmid = {22514286},
   keywords = {Adolescent,Adult,Biofeedback; Psychology,Female,Humans,Learning,Male,Motor Skills,Movement,Task Performance and Analysis}
+}
+
+@article{Shmuelof_Overcoming_2012,
+  title = {Overcoming {{Motor}} ``{{Forgetting}}'' {{Through Reinforcement Of Learned Actions}}},
+  author = {Shmuelof, Lior and Huang, Vincent S. and Haith, Adrian M. and Delnicki, Raymond J. and Mazzoni, Pietro and Krakauer, John W.},
+  year = {2012},
+  month = oct,
+  journal = {Journal of Neuroscience},
+  volume = {32},
+  number = {42},
+  pages = {14617-14621a},
+  publisher = {{Society for Neuroscience}},
+  issn = {0270-6474, 1529-2401},
+  doi = {10.1523/JNEUROSCI.2184-12.2012},
+  abstract = {The human motor system rapidly adapts to systematic perturbations but the adapted behavior seems to be forgotten equally rapidly. The reason for this forgetting is unclear, as is how to overcome it to promote long-term learning. Here we show that adapted behavior can be stabilized by a period of binary feedback about success and failure in the absence of vector error feedback. We examined the time course of decay after adaptation to a visuomotor rotation through a visual error-clamp condition\textemdash trials in which subjects received false visual feedback showing perfect directional performance, regardless of the movements they actually made. Exposure to this error-clamp following initial visuomotor adaptation led to a rapid reversion to baseline behavior. In contrast, exposure to binary feedback after initial adaptation turned the adapted state into a new baseline, to which subjects reverted after transient exposure to another visuomotor rotation. When both binary feedback and vector error were present, some subjects exhibited rapid decay to the original baseline, while others persisted in the new baseline. We propose that learning can be decomposed into two components\textemdash a fast-learning, fast-forgetting adaptation process that is sensitive to vector errors and insensitive to task success, and a second process driven by success that learns more slowly but is less susceptible to forgetting. These two learning systems may be recruited to different degrees across individuals. Understanding this competitive balance and exploiting the long-term retention properties of learning through reinforcement is likely to be essential for successful neuro-rehabilitation.},
+  chapter = {Brief Communications},
+  copyright = {Copyright \textcopyright{} 2012 the authors 0270-6474/12/3214617-05\$15.00/0},
+  language = {en},
+  pmid = {23077047}
 }
 
 @article{Siegler_Perils_1987,
