--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -7169,6 +7169,21 @@
   language = {en}
 }
 
+@article{McGuire_Functionally_2014,
+  title = {Functionally {{Dissociable Influences}} on {{Learning Rate}} in a {{Dynamic Environment}}},
+  author = {McGuire, Joseph T. and Nassar, Matthew R. and Gold, Joshua I. and Kable, Joseph W.},
+  year = {2014},
+  month = nov,
+  journal = {Neuron},
+  volume = {84},
+  number = {4},
+  pages = {870--881},
+  issn = {0896-6273},
+  doi = {10.1016/j.neuron.2014.10.013},
+  abstract = {Maintaining accurate beliefs in a changing environment requires dynamically adapting the rate at which one learns from new experiences. Beliefs should be stable in the face of noisy data but malleable in periods of change or uncertainty. Here we used computational modeling, psychophysics, and fMRI to show~that adaptive learning is not a unitary phenomenon in~the brain. Rather, it can be decomposed into three computationally and neuroanatomically distinct factors that were evident in human subjects performing a spatial-prediction task: (1) surprise-driven belief updating, related to BOLD activity in visual cortex; (2) uncertainty-driven belief updating, related to anterior prefrontal and parietal activity; and (3) reward-driven belief updating, a context-inappropriate behavioral tendency related to activity in ventral striatum. These distinct factors converged in a core system governing adaptive learning. This system, which included dorsomedial frontal cortex, responded to all three factors and predicted belief updating both across trials and across individuals.},
+  language = {en}
+}
+
 @article{McKerchar_Delay_2012,
   title = {Delay and Probability Discounting in Humans: {{An}} Overview},
   shorttitle = {Delay and Probability Discounting in Humans},
@@ -7740,6 +7755,26 @@
   language = {en},
   pmid = {20844132},
   keywords = {change-point}
+}
+
+@article{Nassar_Dissociable_2019,
+  title = {Dissociable {{Forms}} of {{Uncertainty}}-{{Driven Representational Change Across}} the {{Human Brain}}},
+  author = {Nassar, Matthew R. and McGuire, Joseph T. and Ritz, Harrison and Kable, Joseph W.},
+  year = {2019},
+  month = feb,
+  journal = {Journal of Neuroscience},
+  volume = {39},
+  number = {9},
+  pages = {1688--1698},
+  publisher = {{Society for Neuroscience}},
+  issn = {0270-6474, 1529-2401},
+  doi = {10.1523/JNEUROSCI.1713-18.2018},
+  abstract = {Environmental change can lead decision makers to shift rapidly among different behavioral regimes. These behavioral shifts can be accompanied by rapid changes in the firing pattern of neural networks. However, it is unknown what the populations of neurons that participate in such ``network reset'' phenomena are representing. Here, we investigated the following: (1) whether and where rapid changes in multivariate activity patterns are observable with fMRI during periods of rapid behavioral change and (2) what types of representations give rise to these phenomena. We did so by examining fluctuations in multivoxel patterns of BOLD activity from male and female human subjects making sequential inferences about the state of a partially observable and discontinuously changing variable. We found that, within the context of this sequential inference task, the multivariate patterns of activity in a number of cortical regions contain representations that change more rapidly during periods of uncertainty following a change in behavioral context. In motor cortex, this phenomenon was indicative of discontinuous change in behavioral outputs, whereas in visual regions, the same basic phenomenon was evoked by tracking of salient environmental changes. In most other cortical regions, including dorsolateral prefrontal and anterior cingulate cortex, the phenomenon was most consistent with directly encoding the degree of uncertainty. However, in a few other regions, including orbitofrontal cortex, the phenomenon was best explained by representations of a shifting context that evolve more rapidly during periods of rapid learning. These representations may provide a dynamic substrate for learning that facilitates rapid disengagement from learned responses during periods of change. SIGNIFICANCE STATEMENT Brain activity patterns tend to change more rapidly during periods of uncertainty and behavioral adjustment, yet the computational role of such rapid transitions is poorly understood. Here, we identify brain regions with fMRI BOLD activity patterns that change more rapidly during periods of behavioral adjustment and use computational modeling to attribute the phenomenon to specific causes. We demonstrate that the phenomenon emerges in different brain regions for different computational reasons, the most common being the representation of uncertainty itself, but that, in a selective subset of regions including orbitofrontal cortex, the phenomenon was best explained as a shifting latent state signal that may serve to control the degree to which recent temporal context affects ongoing expectations.},
+  chapter = {Research Articles},
+  copyright = {Copyright \textcopyright{} 2019 the authors 0270-6474/19/391688-11\$15.00/0},
+  language = {en},
+  pmid = {30523066},
+  keywords = {fMRI,learning,orbitofrontal cortex,representational similarity,uncertainty}
 }
 
 @article{Natarajan_Encoding_2008,
@@ -8844,6 +8879,24 @@
   pages = {e1002382},
   doi = {10.1371/journal.pcbi.1002382},
   abstract = {Author Summary In models of decision making, evidence is accumulated until it crosses a threshold. The amount of evidence is directly related to the strength of the sensory input for the decision alternatives. Such one-stage models predict that if two stimulus alternatives are presented in succession, the stimulus alternative presented first dominates the decision, as the accumulated evidence will reach the threshold for this alternative first. Here, we show that for short stimulus durations decision making is not dominated by the first, but by the second stimulus. This result cannot be explained by classical one-stage decision models. We present a two-stage model where sensory input is first integrated before its outcome is fed into a classical decision process.}
+}
+
+@article{Rutledge_Dopaminergic_2009,
+  title = {Dopaminergic Drugs Modulate Learning Rates and Perseveration in {{Parkinson}}'s Patients in a Dynamic Foraging Task},
+  author = {Rutledge, Robb B. and Lazzaro, Stephanie C. and Lau, Brian and Myers, Catherine E. and Gluck, Mark A. and Glimcher, Paul W.},
+  year = {2009},
+  month = dec,
+  journal = {The Journal of Neuroscience: The Official Journal of the Society for Neuroscience},
+  volume = {29},
+  number = {48},
+  pages = {15104--15114},
+  issn = {1529-2401},
+  doi = {10.1523/JNEUROSCI.3524-09.2009},
+  abstract = {Making appropriate choices often requires the ability to learn the value of available options from experience. Parkinson's disease is characterized by a loss of dopamine neurons in the substantia nigra, neurons hypothesized to play a role in reinforcement learning. Although previous studies have shown that Parkinson's patients are impaired in tasks involving learning from feedback, they have not directly tested the widely held hypothesis that dopamine neuron activity specifically encodes the reward prediction error signal used in reinforcement learning models. To test a key prediction of this hypothesis, we fit choice behavior from a dynamic foraging task with reinforcement learning models and show that treatment with dopaminergic drugs alters choice behavior in a manner consistent with the theory. More specifically, we found that dopaminergic drugs selectively modulate learning from positive outcomes. We observed no effect of dopaminergic drugs on learning from negative outcomes. We also found a novel dopamine-dependent effect on decision making that is not accounted for by reinforcement learning models: perseveration in choice, independent of reward history, increases with Parkinson's disease and decreases with dopamine therapy.},
+  language = {eng},
+  pmcid = {PMC3376711},
+  pmid = {19955362},
+  keywords = {Age Factors,Aged,Case-Control Studies,Conditioning; Operant,Decision Making,Dopamine Agents,Female,Humans,Linear Models,Male,Middle Aged,Models; Psychological,Neuropsychological Tests,Parkinson Disease,Predictive Value of Tests,Probability,Reading,Reinforcement; Psychology}
 }
 
 @article{Salamone_Mysterious_2012,
